Changes to be committed: 	deleted:    DevFolio/assets/img/backwround/p1.png 	modified:   DevFolio/index.html

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -57,7 +57,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/backwround/p1.png)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/backwround/1p.png)>
     <div class="overlay-itro"></div><!-- ======= opacity ======= -->
     <div class="hero-content display-table">
       <div class="table-cell">
